<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity">

        <LinearLayout
            android:id="@+id/input_linearLayout"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:orientation="vertical"
            android:weightSum="100"
            app:layout_constraintBottom_toTopOf="@+id/linearLayout"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_weight="3">

            <EditText
                android:id="@+id/inputEditText"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_gravity="bottom"
                android:layout_weight="75"
                android:autofillHints=""
                android:background="@null"
                android:contentDescription=""
                android:digits="0123456789.+-×÷^"
                android:gravity="bottom|end"
                android:inputType="textVisiblePassword"
                android:labelFor="@id/resultTextView"
                android:maxHeight="100dp"
                android:maxLines="3"
                android:minHeight="20dp"
                android:padding="0dp"
                android:scrollbars="vertical"
                android:text=""
                android:textSize="48sp"
                tools:ignore="LabelFor" />

            <HorizontalScrollView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="25">

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/resultTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_gravity="end"
                    android:gravity="end"
                    android:scrollbars="horizontal"
                    android:scrollHorizontally="true"
                    android:text=""
                    android:textIsSelectable="true"
                    android:textSize="32sp" />
            </HorizontalScrollView>

            <com.google.android.material.divider.MaterialDivider
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="16dp" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"

            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/input_linearLayout"
            app:layout_constraintVertical_weight="6">


            <LinearLayout style="@style/row_linear_layout_style">

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/remove_button"
                    style="@style/remove_button_style"
                    android:layout_weight="1"
                    android:text="@string/clear" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/plus_minus_button"
                    style="@style/standard_button_style"
                    android:layout_weight="1"
                    android:text="" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/percent_button"
                    style="@style/standard_button_style"
                    android:layout_weight="1"
                    android:tag="@string/percent"
                    android:text="@string/percent"
                    android:textColor="@color/operation_icon_color" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/divide_button"
                    style="@style/operation_with_icon_button_style"
                    android:layout_weight="1"
                    android:tag="@string/divide_string"
                    android:text=""
                    app:icon="@drawable/divide"
                    app:iconSize="30dp" />
            </LinearLayout>

            <LinearLayout style="@style/row_linear_layout_style">

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/button_seven"
                    style="@style/standard_button_style"
                    android:layout_weight="1"
                    android:tag="@string/seven"
                    android:text="@string/seven" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/button_eight"
                    style="@style/standard_button_style"
                    android:layout_weight="1"
                    android:tag="@string/eight"
                    android:text="@string/eight" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/button_nine"
                    style="@style/standard_button_style"
                    android:layout_weight="1"
                    android:tag="@string/nine"
                    android:text="@string/nine" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/multiply_button"
                    style="@style/operation_with_icon_button_style"
                    android:layout_weight="1"
                    android:tag="@string/multiply_string"
                    android:text=""
                    app:icon="@drawable/baseline_multiply_24"
                    app:iconSize="25dp" />
            </LinearLayout>

            <LinearLayout style="@style/row_linear_layout_style">

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/button_four"
                    style="@style/standard_button_style"
                    android:layout_weight="1"
                    android:tag="@string/four"
                    android:text="@string/four" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/button_five"
                    style="@style/standard_button_style"
                    android:layout_weight="1"
                    android:tag="@string/five"
                    android:text="@string/five" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/button_six"
                    style="@style/standard_button_style"
                    android:layout_weight="1"
                    android:tag="@string/six"
                    android:text="@string/six" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/minus_button"
                    style="@style/operation_with_icon_button_style"
                    android:layout_weight="1"
                    android:tag="@string/minus_string"
                    android:text=""
                    app:icon="@drawable/baseline_remove_24"
                    app:iconSize="25dp" />
            </LinearLayout>

            <LinearLayout style="@style/row_linear_layout_style">

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/button_one"
                    style="@style/standard_button_style"
                    android:layout_weight="1"
                    android:tag="@string/one"
                    android:text="@string/one" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/button_two"
                    style="@style/standard_button_style"
                    android:layout_weight="1"
                    android:tag="@string/two"
                    android:text="@string/two" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/button_three"
                    style="@style/standard_button_style"
                    android:layout_weight="1"
                    android:tag="@string/three"
                    android:text="@string/three" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/plus_button"
                    style="@style/standard_last_in_row_button"
                    android:layout_weight="1"
                    android:tag="@string/plus_string"
                    android:text="@string/plus_string"
                    android:textColor="@color/operation_icon_color" />
            </LinearLayout>

            <LinearLayout style="@style/row_linear_layout_style">

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/button_zero"
                    style="@style/standard_button_style"
                    android:layout_weight="1"
                    android:tag="@string/zero"
                    android:text="@string/zero" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/comma_button"
                    style="@style/standard_button_style"
                    android:layout_weight="1"
                    android:tag="@string/comma"
                    android:text="@string/comma" />


                <com.google.android.material.button.MaterialButton
                    android:id="@+id/equals_button"
                    style="@style/operation_with_icon_button_style"
                    android:layout_weight="2.2"
                    android:backgroundTint="@color/equals_button_background"
                    android:text=""
                    app:icon="@drawable/baseline_drag_handle_24"
                    app:iconSize="30dp"
                    app:iconTint="@color/remove_button_text_color" />
            </LinearLayout>


        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>